AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AccountBusinessType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountBusinessType__c</fullName>
    <label>Account Business Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Account Business Type</masterLabel>
        <refAttrDeveloperName>AccountBusinessType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>