AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AccountOwnershipType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountOwnershipType__c</fullName>
    <label>Account Ownership Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Account Ownership Type</masterLabel>
        <refAttrDeveloperName>AccountOwnershipType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>