AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AccountPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountPriority__c</fullName>
    <label>Account Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Account Priority</masterLabel>
        <refAttrDeveloperName>AccountPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>