AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AccountRatingType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountRatingType__c</fullName>
    <label>Account Rating Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Account Rating Type</masterLabel>
        <refAttrDeveloperName>AccountRatingType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>