AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AccountServiceEntitlements__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountServiceEntitlements__c</fullName>
    <label>AccountServiceEntitlements relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>AccountServiceEntitlements relationship</masterLabel>
        <refAttrDeveloperName>AccountServiceEntitlements</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>