AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AccountWebsiteURL__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountWebsiteURL__c</fullName>
    <label>Account Website URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Account Website URL</masterLabel>
        <refAttrDeveloperName>AccountWebsiteURL</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>