AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AnnualRevenueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AnnualRevenueAmount__c</fullName>
    <label>Annual Revenue Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Annual Revenue Amount</masterLabel>
        <refAttrDeveloperName>AnnualRevenueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>