AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AssignTerritoryFlag__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignTerritoryFlag__c</fullName>
    <label>Assign Territory Flag</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Assign Territory Flag</masterLabel>
        <refAttrDeveloperName>AssignTerritoryFlag</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>