AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AutoPayEnabledFlag__c.field-meta.xml
<CustomField>
    <fullName>ssot__AutoPayEnabledFlag__c</fullName>
    <label>Auto Pay Enabled Flag</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Auto Pay Enabled Flag</masterLabel>
        <refAttrDeveloperName>AutoPayEnabledFlag</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>