AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__BalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__BalanceAmount__c</fullName>
    <label>Balance Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Balance Amount</masterLabel>
        <refAttrDeveloperName>BalanceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>