AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__BalanceAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__BalanceAmountCurrency__c</fullName>
    <label>Balance Amount Currency</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Balance Amount Currency</masterLabel>
        <refAttrDeveloperName>BalanceAmountCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>