AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__BalanceAmountLimit__c.field-meta.xml
<CustomField>
    <fullName>ssot__BalanceAmountLimit__c</fullName>
    <label>Balance Amount Limit</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Balance Amount Limit</masterLabel>
        <refAttrDeveloperName>BalanceAmountLimit</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>