AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__BalanceAmountLimitCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__BalanceAmountLimitCurrency__c</fullName>
    <label>Balance Amount Limit Currency</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Balance Amount Limit Currency</masterLabel>
        <refAttrDeveloperName>BalanceAmountLimitCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>