AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__BalanceUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BalanceUnitOfMeasureId__c</fullName>
    <label>Balance Unit Of Measure</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Balance Unit Of Measure</masterLabel>
        <refAttrDeveloperName>BalanceUnitOfMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>