AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__BillContactAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillContactAddressId__c</fullName>
    <label>Bill Contact Address</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Bill Contact Address</masterLabel>
        <refAttrDeveloperName>BillContactAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>