AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__BillDeliveryMethodId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillDeliveryMethodId__c</fullName>
    <label>Bill Delivery Method</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Bill Delivery Method</masterLabel>
        <refAttrDeveloperName>BillDeliveryMethodId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>