AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__BillFrequency__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillFrequency__c</fullName>
    <label>Bill Frequency</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Bill Frequency</masterLabel>
        <refAttrDeveloperName>BillFrequency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>