AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__ContactPointSocialId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactPointSocialId__c</fullName>
    <label>Contact Point Social</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Contact Point Social</masterLabel>
        <refAttrDeveloperName>ContactPointSocialId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>