AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__CreditLimitAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreditLimitAmount__c</fullName>
    <label>Credit Limit</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Credit Limit</masterLabel>
        <refAttrDeveloperName>CreditLimitAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>