AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__CreditRatingType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreditRatingType__c</fullName>
    <label>Credit Rating Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Credit Rating Type</masterLabel>
        <refAttrDeveloperName>CreditRatingType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>