AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__DefaultFreightTermsId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DefaultFreightTermsId__c</fullName>
    <label>Default Freight Terms</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Default Freight Terms</masterLabel>
        <refAttrDeveloperName>DefaultFreightTermsId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>