AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__DefaultPriceBookId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DefaultPriceBookId__c</fullName>
    <label>Default Price Book</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Default Price Book</masterLabel>
        <refAttrDeveloperName>DefaultPriceBookId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>