AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__FixedFundingOverdrawPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__FixedFundingOverdrawPercent__c</fullName>
    <label>Fixed Funding Overdraw Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Fixed Funding Overdraw Percentage</masterLabel>
        <refAttrDeveloperName>FixedFundingOverdrawPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>