AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__GeneralLedgerAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeneralLedgerAccountId__c</fullName>
    <label>General Ledger Account</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>General Ledger Account</masterLabel>
        <refAttrDeveloperName>GeneralLedgerAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>