AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__HoldStatusReasonId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HoldStatusReasonId__c</fullName>
    <label>Hold Status Reason</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Hold Status Reason</masterLabel>
        <refAttrDeveloperName>HoldStatusReasonId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>