AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__IsCustomer__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCustomer__c</fullName>
    <label>Is Customer</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Is Customer</masterLabel>
        <refAttrDeveloperName>IsCustomer</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>