AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__isPartner__c.field-meta.xml
<CustomField>
    <fullName>ssot__isPartner__c</fullName>
    <label>is Partner</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>is Partner</masterLabel>
        <refAttrDeveloperName>isPartner</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>