AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__isSupplier__c.field-meta.xml
<CustomField>
    <fullName>ssot__isSupplier__c</fullName>
    <label>is Supplier</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>is Supplier</masterLabel>
        <refAttrDeveloperName>isSupplier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>