AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__NextInteractionDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__NextInteractionDate__c</fullName>
    <label>Next Interaction Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Next Interaction Date</masterLabel>
        <refAttrDeveloperName>NextInteractionDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>