AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__NextReviewDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__NextReviewDate__c</fullName>
    <label>Next. Review Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Next. Review Date</masterLabel>
        <refAttrDeveloperName>NextReviewDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>