AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__NinetyDayBalanceAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__NinetyDayBalanceAmountCurrency__c</fullName>
    <label>Ninety Day Balance Amount Currency</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Ninety Day Balance Amount Currency</masterLabel>
        <refAttrDeveloperName>NinetyDayBalanceAmountCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>