AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__Number__c.field-meta.xml
<CustomField>
    <fullName>ssot__Number__c</fullName>
    <label>Account Number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Account Number</masterLabel>
        <refAttrDeveloperName>Number</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>