AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OperatingHoursId__c</fullName>
    <label>Operating Hours</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Operating Hours</masterLabel>
        <refAttrDeveloperName>OperatingHoursId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>