AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__OrderDeliveryMethodId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrderDeliveryMethodId__c</fullName>
    <label>Order Delivery Method</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Order Delivery Method</masterLabel>
        <refAttrDeveloperName>OrderDeliveryMethodId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>