AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__ParentAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentAccountId__c</fullName>
    <label>Parent Account</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Parent Account</masterLabel>
        <refAttrDeveloperName>ParentAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>